--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/PeaceAntoHim/React-App.git",
+  "author": "PeaceAntoHim <stefanusfranssebastian@gmail.com>",
+  "license": "MIT"
 }
